--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,67 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #553055;
+}
+.nav-bar{
+  padding: 10px 20px;
+  text-align: center;
+  background: #6d3d6d;
+  color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.nav-bar h1{
+  margin: 10px 0;
+}
+
+.book-list{
+  margin: 20px;
+
+}
+
+.book-list ul{
+  padding: 0;
+  list-style-type: none;
+}
+
+.book-list li{
+  background-color: #6d3d6d;
+  border-radius: 4px;
+  padding: 10px;
+  cursor: pointer;
+  margin: 10px 0;
+}
+
+.book-list li:hover{
+  opacity: 0.7;
+  text-decoration: line-through;
+
+}
+.book-list .title{
+  font-weight: bold;
+  color: #fff;
+  font-size: 1.2rem;
+}
+
+input[type='text']{
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  margin: 6px 0;
+  background: #3c1f3c;
+  color: #fff;
+  border: 0;
+  outline: 0;
+}
+
+.submit{
+  margin: 10px auto;
+  background: #eee;
+  border: 0;
+  padding: 6px 20px;
+  display: block;
+}
+
+.form{
+  padding: 20px;
 }
